# upcheck

./: .coveragerc  .cruft.json  .envrc  .frkl.project  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  setup.cfg  setup.py  test.yaml  tox.ini
.github/workflows/: build-linux.yaml  build-mac-osx.yaml
ci/build-binary/: requirements-build.txt
ci/build-binary/windows/: requirements-build.txt
ci/docker/: Dockerfile
db/: ca.pem  schema.sql
db/migrations/: 20200705193405_create_check_results_table.sql
docs/: install.md  sources_and_targets.md  usage.md
examples/: kafka_source_aiven.yaml  kafka_source_aiven_token.yaml  kafka_target.yaml  kafka_target_aiven.yaml  kafka_target_aiven_token.yaml  multi_checks.yaml  postgres_target.yaml  postgres_target_aiven.yaml  postgres_target_aiven_token.yaml  single_item_check.yaml  single_item_check_dict.yaml  single_item_with_regex.yaml
scripts/build-binary/: build.sh  onefile.spec
scripts/install/: upcheck.sh
src/upcheck/: __init__.py  _meta.py  db.py  defaults.py  exceptions.py  models.py  upcheck.py  url_check.py  utils.py
src/upcheck/interfaces/: cli.py
src/upcheck/interfaces/cli/: __init__.py  _utlis.py  check.py  dev.py  kafka_listen.py  listen.py  main.py  self.py
src/upcheck/resources/: check_metric.avsc
src/upcheck/sources/: __init__.py  check.py  kafka.py
src/upcheck/targets/: __init__.py  kafka.py  postgres.py  terminal.py
src/upcheck/utils/: __init__.py  aiven.py  callables.py  kafka.py
tests/: conftest.py  test_check.py  test_cli.py  test_config.py  test_integration.py  test_sources.py  test_targets.py  test_upcheck.py
tests/resources/: kafka_incl_certs.yaml  kafka_source.yaml  kafka_source_invalid.yaml  postgres_target.yaml  postgres_target_invalid.yaml  urls_1.yaml  urls_invalid_url.yaml  urls_invalid_url_2.yaml  urls_invalid_yaml.yaml
